cp3-networkpolicy/ingress/operators/access-to-ibm-common-service-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
  name: access-to-ibm-common-service-operator
  namespace: "csNamespace"
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      name: ibm-common-service-operator
  policyTypes:
  - Ingress
