cp3-networkpolicy/ingress/operators/access-to-zen-meta-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
  name: access-to-zen-meta-api
  namespace: "csNamespace"
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ibm-zen-meta-api
  policyTypes:
  - Ingress
