cp3-networkpolicy/ingress/operators/olm-access-to-bedrock-catalog.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-operator-lifecyele-manager
  namespace: "opNamespace"
  labels:
    component: cpfs3
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-operator-lifecycle-manager
  policyTypes:
    - Ingress
